# cookiecutter-ml-dl

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml  test_notebook.ipynb
