[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
torch = {version = "^2.1.1+cu121", source = "pytorch-gpu-src"}
torchvision = {version = "^0.16.2+cu121", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.1.2+cu121", source = "pytorch-gpu-src"}
jupyterlab = "^4.0.3"
xgboost = "^2.0.3"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
lightgbm = "^4.2.0"
pyarrow = "^14.0.2"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
black = {extras = ["jupyter"], version = "^23.12.0"}
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
polars = "^0.20.2"
tqdm = "^4.66.1"
beartype = "^0.16.4"
scipy = "^1.11.4"

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
