[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.4.0", source = "pytorch-gpu-src"}
torchvision = {version = "^0.19.0", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.4.0", source = "pytorch-gpu-src"}
jupyterlab = "^4.0.3"
xgboost = "2.0.3"
catboost = "1.2.7"
scikit-learn = "1.2.2"
lightgbm = "4.2.0"
pyarrow = "^14.0.2"
pandas = "2.2.3"
polars = "1.19.0"
numpy = "1.26.4"
scipy = "1.14.1"
seaborn = "^0.13.2"
lion-pytorch = "^0.2.3"
grokfast-pytorch = "^0.0.11"
numba = "^0.60.0"
grpcio = "^1.69.0"
google-api-python-client = "^2.157.0"
tqdm = "^4.66.1"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
jupyterlab-code-formatter = "*"
codeium-jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
